2004-11-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b264

	* Fix: Don't display rss.php in offline mode

2004-11-05  Beckett Madden-Woods  <beckett@beckettmw.com> 1.5-cvs-b263

	* captionator.php: fix photos-per-page count to work with
	  register_globals off, and also when linked to from
	  albums.php

2004-11-04  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b262

	* Text: Update the Mambo HowTo.txt

	* Fix: Integrate the relavent portions of 1.4.4-pl3/4

2004-11-03  Beckett Madden-Woods  <beckett@beckettmw.com> 1.5-cvs-b261

	* Edit grammar in do_command.php (modifying text string).

2004-11-01  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b260

	* Fix: Uploading compressed files were broken due to wrong test.

	* Change: Lower extension when testing supported tool.

2004-10-31  John Kirkland <jpk@bl.org>  1.5-cvs-b259

	* Change:  Fix XP Publishing Wizard with register globals off.

2004-10-29  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b258

	* Fix 971760: Clear autorotate flag after rotating

	* Change:  Correct the 'canViewFull' behavior - we were 
	  allowing users to see the full image if there was no resized
	  available, however this was not the original intent.

2004-10-29  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b257

	* Fix 1055656: Return array() instead of NULL

2004-10-29  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b256

	* Change: Updated manifest to remove serious warning in config/Step1

2004-10-27  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b255

	* New: Added resizeAllPhotos() to classes/Album.php
	       Used in tweaked resize_photo.php. It has the possibility to do the resize recursive.

	       Mostly done by Dell'Aiera Pol <dellaiera.pol@gmail.com>

2004-10-26  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b254

	* Change:  1.5 has been re-versioned to 1.5 due to the vast
	  number of changes, and in preparation for G2.

2004-10-26  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b254
