@@ -1,3 +1,10 @@
+2004-11-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b265
+
+	* Fix 973081: Add some complicated regex to search.php to prevent
+	  our highlight routines from breaking URLs when a portion of the
+	  href matches the searchstring.  Still can be enhanced to work with
+	  non-<a> cases.
+
 2004-11-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b264
 
 	* Fix: Don't display rss.php in offline mode
